[gd_scene load_steps=34 format=3 uid="uid://cxxoowpkh2od0"]

[ext_resource type="Texture2D" uid="uid://crq5sfpdh1aup" path="res://Art Aseets/Final_Scenes/Island/island water - 1bg.png" id="1_r0eyw"]
[ext_resource type="Script" path="res://Enviroment/IslandController.gd" id="1_ytcfa"]
[ext_resource type="Shader" path="res://Shaders/TextureShader.gdshader" id="2_6wp8d"]
[ext_resource type="PackedScene" uid="uid://dfl8whmljfs42" path="res://Objects/CraftingMaterials/Wood.tscn" id="2_t7ndq"]
[ext_resource type="Texture2D" uid="uid://d4a7cx20x028j" path="res://Art Aseets/Final_Scenes/Island/fg island.png" id="3_b3dsn"]
[ext_resource type="Texture2D" uid="uid://bu3t580y8kyhj" path="res://Shaders/seamless_perlin_noise_texture.png" id="3_fgyos"]
[ext_resource type="PackedScene" uid="uid://bn33m65oe7acx" path="res://Objects/CraftingMaterials/Fiber.tscn" id="3_j5tpv"]
[ext_resource type="Texture2D" uid="uid://dcbqnfbwhowp0" path="res://Art Aseets/Final_Scenes/Island/calm sky.png" id="3_vlcsw"]
[ext_resource type="Texture2D" uid="uid://dpyftl8ul22w7" path="res://Art Aseets/UI/UI-Sheet.png" id="7_wxpf3"]
[ext_resource type="Texture2D" uid="uid://dxys4g6ylkehe" path="res://Shaders/craftingicon.png" id="8_jwv1m"]
[ext_resource type="Script" path="res://Enviroment/OpenCrafting.gd" id="9_4yvy5"]
[ext_resource type="Texture2D" uid="uid://wy6cb2xey11g" path="res://Art Aseets/Final_Scenes/Island/bg islands (1).png" id="9_suqiv"]
[ext_resource type="Texture2D" uid="uid://dg32rmq61f4x8" path="res://Art Aseets/Josiahs Pixel Art/backpack.png" id="10_0mxst"]
[ext_resource type="PackedScene" uid="uid://dsjv7ieru54dl" path="res://crafting_ui.tscn" id="10_4l8ho"]
[ext_resource type="Texture2D" uid="uid://dhiaxl6vvlmna" path="res://Art Aseets/Fish/fish 1-export.png" id="10_bsrql"]
[ext_resource type="Script" path="res://Areas/OutToSea.gd" id="11_2esbu"]
[ext_resource type="Script" path="res://Scripts/OpenInventory.gd" id="11_qyn0q"]
[ext_resource type="PackedScene" uid="uid://cc4cq46ydp085" path="res://Objects/final_notif.tscn" id="12_eioxm"]
[ext_resource type="PackedScene" uid="uid://cftdc0lxeypvc" path="res://Autoloads/inventory_manager.tscn" id="13_cf3mr"]
[ext_resource type="Script" path="res://Areas/supplies_shop.gd" id="19_yrems"]
[ext_resource type="PackedScene" uid="uid://g6ijln38fc2g" path="res://Objects/shopkeeper.tscn" id="20_8gwye"]
[ext_resource type="PackedScene" uid="uid://fkrlgxcotnqw" path="res://Imports/notification_new.tscn" id="20_uf54t"]
[ext_resource type="Script" path="res://Sound/KeyValuePair.gd" id="21_cjx2g"]
[ext_resource type="Texture2D" uid="uid://c40h0vqlqkh5g" path="res://Art Aseets/Final_Scenes/Island/dock.png" id="23_3mldh"]
[ext_resource type="Texture2D" uid="uid://c6a7qotwbapn2" path="res://Art Aseets/UI/EquipLabel_13x14.png" id="24_wy87k"]
[ext_resource type="Script" path="res://Areas/DockYards.gd" id="25_mqiqv"]
[ext_resource type="PackedScene" uid="uid://bd1rc4uds6mw0" path="res://Dialog System/dialog_ui.tscn" id="25_vr74f"]
[ext_resource type="PackedScene" uid="uid://caisr8niaikvi" path="res://dock_cat.tscn" id="26_7cokw"]
[ext_resource type="PackedScene" uid="uid://cfg0k0vo8wunm" path="res://ui_hud.tscn" id="26_gpxmj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r7r30"]
shader = ExtResource("2_6wp8d")
shader_parameter/fog_offset = Vector2(0, 0)
shader_parameter/image_offset = Vector2(0, 0)
shader_parameter/density = 0.7
shader_parameter/speed = Vector2(0.004, 0.001)
shader_parameter/image_speed = Vector2(0, 0)
shader_parameter/blend_factor = 0.5
shader_parameter/y_threshold = 0.3
shader_parameter/fade_strength = 1.0
shader_parameter/y_cutoff = 0.1
shader_parameter/cutoff_fade_strength = 0.1
shader_parameter/image_y_cutoff = 0.1
shader_parameter/image_cutoff_fade_strength = 0.1
shader_parameter/fog_opacity = 0.09
shader_parameter/random_factor = 0.1
shader_parameter/noise_texture = ExtResource("3_fgyos")
shader_parameter/background_image1 = ExtResource("3_vlcsw")
shader_parameter/background_image2 = ExtResource("3_vlcsw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lvpqk"]
shader = ExtResource("2_6wp8d")
shader_parameter/fog_offset = Vector2(0, 0)
shader_parameter/image_offset = Vector2(0, 0)
shader_parameter/density = 0.73
shader_parameter/speed = Vector2(0.02, 0.005)
shader_parameter/image_speed = Vector2(0, 0)
shader_parameter/blend_factor = 0.348
shader_parameter/y_threshold = 0.3
shader_parameter/fade_strength = 1.0
shader_parameter/y_cutoff = 0.1
shader_parameter/cutoff_fade_strength = 0.1
shader_parameter/image_y_cutoff = 0.1
shader_parameter/image_cutoff_fade_strength = 0.1
shader_parameter/fog_opacity = 0.325
shader_parameter/random_factor = 0.315
shader_parameter/noise_texture = ExtResource("3_fgyos")
shader_parameter/background_image1 = ExtResource("1_r0eyw")
shader_parameter/background_image2 = ExtResource("1_r0eyw")

[sub_resource type="AtlasTexture" id="AtlasTexture_4pbyc"]
atlas = ExtResource("7_wxpf3")
region = Rect2(641.474, 138.713, 219.615, 222.277)

[sub_resource type="Resource" id="Resource_wd5ox"]
script = ExtResource("21_cjx2g")
key = "Wood"
value = 5

[node name="Island" type="Node2D"]
script = ExtResource("1_ytcfa")
itemTest = [ExtResource("2_t7ndq"), ExtResource("3_j5tpv")]

[node name="Deep Water" type="TextureRect" parent="."]
modulate = Color(0.703808, 0.703808, 0.703808, 1)
visibility_layer = 3
offset_left = -1.0
offset_top = 639.0
offset_right = 1279.0
offset_bottom = 933.0
scale = Vector2(1.5, 1.5)
mouse_filter = 2
texture = ExtResource("1_r0eyw")

[node name="Sky" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_r7r30")
offset_left = -17.0
offset_top = -102.0
offset_right = 2021.0
offset_bottom = 651.0
mouse_filter = 2
texture = ExtResource("3_vlcsw")

[node name="Water" type="TextureRect" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_lvpqk")
offset_left = -136.0
offset_top = 573.0
offset_right = 1362.0
offset_bottom = 917.0
scale = Vector2(1.5, 1.5)
mouse_filter = 2
texture = ExtResource("1_r0eyw")

[node name="Island" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(638, 709)
texture = ExtResource("3_b3dsn")

[node name="TextureRect" type="TextureRect" parent="Island"]
z_index = -2
offset_left = -1026.0
offset_top = -548.0
offset_right = 254.0
offset_bottom = 229.0
mouse_filter = 2
texture = ExtResource("9_suqiv")

[node name="TextureRect2" type="TextureRect" parent="Island"]
z_index = -2
offset_left = -119.0
offset_top = -548.0
offset_right = 1161.0
offset_bottom = 229.0
mouse_filter = 2
texture = ExtResource("9_suqiv")
flip_h = true

[node name="UI" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 1935.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="OpenCraftingButton" type="TextureRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 11.0
offset_right = 224.0
offset_bottom = 233.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
texture = SubResource("AtlasTexture_4pbyc")

[node name="TextureButton" type="TextureButton" parent="UI/OpenCraftingButton"]
layout_mode = 0
offset_top = 13.3333
offset_right = 356.0
offset_bottom = 346.333
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("8_jwv1m")
stretch_mode = 3
script = ExtResource("9_4yvy5")

[node name="Notification" parent="UI/OpenCraftingButton" instance=ExtResource("12_eioxm")]
layout_mode = 0
offset_left = 226.667
offset_top = 16.6667
offset_right = 586.667
offset_bottom = 207.667

[node name="CastOff" type="TextureRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = 1768.0
offset_top = 929.0
offset_right = 1987.0
offset_bottom = 1151.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = SubResource("AtlasTexture_4pbyc")

[node name="TextureButton" type="TextureButton" parent="UI/CastOff"]
layout_mode = 0
offset_top = 13.3333
offset_right = 356.0
offset_bottom = 346.333
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("10_bsrql")
stretch_mode = 3
script = ExtResource("11_2esbu")

[node name="InventoryButton" type="TextureRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_top = 78.0
offset_right = 226.0
offset_bottom = 300.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
texture = SubResource("AtlasTexture_4pbyc")

[node name="TextureButton" type="TextureButton" parent="UI/InventoryButton"]
layout_mode = 0
offset_top = 13.3333
offset_right = 356.0
offset_bottom = 346.333
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("10_0mxst")
stretch_mode = 5
script = ExtResource("11_qyn0q")

[node name="supplies_shop" type="TextureButton" parent="UI"]
visible = false
layout_mode = 0
offset_left = 160.0
offset_top = 567.0
offset_right = 200.0
offset_bottom = 607.0
texture_normal = ExtResource("24_wy87k")
stretch_mode = 4
script = ExtResource("19_yrems")

[node name="supplies_shop_keeper" parent="UI" instance=ExtResource("20_8gwye")]
visible = false
offset_left = 732.0
offset_top = 190.0
offset_right = 732.0
offset_bottom = 190.0
shopkeeperName = "Shopkeeper"
shopkeeper_stock = Array[ExtResource("21_cjx2g")]([SubResource("Resource_wd5ox")])

[node name="Quit Button" type="TextureRect" parent="UI"]
layout_mode = 0
offset_left = 1843.0
offset_top = 10.0
offset_right = 2062.0
offset_bottom = 232.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2
texture = SubResource("AtlasTexture_4pbyc")

[node name="TextureButton" type="TextureButton" parent="UI/Quit Button"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_top = 13.3333
offset_right = 356.0
offset_bottom = 346.333
scale = Vector2(0.6, 0.6)
stretch_mode = 3
script = ExtResource("9_4yvy5")
quit_button = true

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Quit Button/TextureButton"]
layout_mode = 0
offset_left = -177.777
offset_top = 50.0
offset_right = 539.223
offset_bottom = 500.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]Exit
Game"

[node name="CraftingUI" parent="UI" instance=ExtResource("10_4l8ho")]
visible = false
offset_left = 961.0
offset_top = 566.0
offset_right = 961.0
offset_bottom = 566.0
scale = Vector2(0.3, 0.3)

[node name="Inventory_Manager" parent="UI" instance=ExtResource("13_cf3mr")]
visible = false
position = Vector2(1339, 313)
scale = Vector2(0.5, 0.5)

[node name="Notification" parent="." instance=ExtResource("20_uf54t")]
visible = false
offset_left = 106.0
offset_top = 129.0
offset_right = 170.0
offset_bottom = 193.0

[node name="Notification2" parent="." instance=ExtResource("20_uf54t")]
visible = false
offset_left = 1811.0
offset_top = 596.0
offset_right = 1875.0
offset_bottom = 660.0
override_text = "Head out over here when ready!"
override = true

[node name="DialogUI" parent="." instance=ExtResource("25_vr74f")]
visible = false
z_index = 5
position = Vector2(407, 493)

[node name="UI_HUD" parent="." instance=ExtResource("26_gpxmj")]
anchors_preset = 9
anchor_right = 0.0
offset_left = 23.0
offset_top = 160.0
offset_right = 130.0
offset_bottom = 1072.0
grow_horizontal = 1
scale = Vector2(0.97, 0.97)
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Dock" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1049, 649)
texture = ExtResource("23_3mldh")

[node name="DockYards" type="TextureButton" parent="Dock"]
visible = false
offset_left = -170.0
offset_top = 89.0
offset_right = -130.0
offset_bottom = 129.0
texture_normal = ExtResource("24_wy87k")
stretch_mode = 4
script = ExtResource("25_mqiqv")

[node name="DockCat" parent="Dock" instance=ExtResource("26_7cokw")]
visible = false
z_index = 4
offset_left = -417.0
offset_top = -443.0
offset_right = -417.0
offset_bottom = -443.0
scale = Vector2(0.9, 0.9)

[connection signal="pressed" from="UI/OpenCraftingButton/TextureButton" to="UI/OpenCraftingButton/TextureButton" method="_on_pressed"]
[connection signal="pressed" from="UI/CastOff/TextureButton" to="UI/CastOff/TextureButton" method="_on_pressed"]
[connection signal="pressed" from="UI/InventoryButton/TextureButton" to="UI/InventoryButton/TextureButton" method="_on_pressed"]
[connection signal="pressed" from="UI/supplies_shop" to="UI/supplies_shop" method="_on_pressed"]
[connection signal="visibility_changed" from="UI/supplies_shop" to="UI/supplies_shop" method="_on_visibility_changed"]
[connection signal="pressed" from="UI/Quit Button/TextureButton" to="UI/Quit Button/TextureButton" method="_on_pressed"]
[connection signal="pressed" from="Dock/DockYards" to="." method="_on_dock_yards_pressed"]
[connection signal="visibility_changed" from="Dock/DockYards" to="Dock/DockYards" method="_on_visibility_changed"]
